# holoboxbotpoc

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/plans/: holobox_conversational_agent_0ec57fe3.plan.md
personas/: default.yaml
scenarios/: avatar_interests.yaml  free_chat.yaml  memory_test.yaml  surprise_game.yaml
src/holobot/: __init__.py  config.py  main.py
src/holobot/audio/: capture.py  playback.py
src/holobot/brain/: conversation.py  persona.py  spontaneity.py
src/holobot/integration/: websocket.py
src/holobot/research/: logger.py
src/holobot/scenario/: child_profile.py  phase.py  runner.py
src/holobot/stt/: base.py  whisper.py
src/holobot/tts/: base.py  elevenlabs.py
